change styles for dark mode fix bug where slide menu icon and position didn't change after resize. fix slide menu z-index;

--- a/css/dark.css
+++ b/css/dark.css
@@ -79,6 +79,7 @@
 }
 
 .botnav {
+    height: 10vh;
     width: 100%;
     display: table;
     justify-content: center;
@@ -94,9 +95,9 @@
     text-align: center;
     vertical-align: middle;
     padding: 5px 5px;
-    height: 10vh;
     display: table-cell;
     width: 25%;
+    height: 100%;
     text-decoration: none;
     font-size: 250%;
     font-family: Sahel;
@@ -133,6 +134,7 @@
 }
 
 .side-bar {
+    z-index: 1;
     direction: rtl;
     height: 100%;
     width: 300px;
@@ -162,55 +164,6 @@ ul#menu li {
     display: inline;
 }
 
-.items-list {
-    justify-content: center;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow-y: scroll;
-    font-family: Sahel;
-    width: calc(100vw - 300px);
-    height: 84vh;
-    color: white;
-    background-color: dimgray;
-}
-
-.items-list li ul {
-    display: inline;
-}
-
-.items-list::-webkit-scrollbar {
-    transform: rotateX(180deg);
-    width: 12px;
-    height: 12px;
-    cursor: grab;
-    background-color: #E8EFF7;
-}
-
-.items-list::-webkit-scrollbar-corner {
-    background-color: black;
-}
-
-.items-list::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #44c553;
-}
-
-.items-list::-webkit-scrollbar-thumb:horizontal:active {
-    background-color: red;
-}
-
-.items-list::-webkit-scrollbar-thumb:vertical:active {
-    background-color: red;
-}
-
-.item:hover {
-    box-shadow: 0 0 1px 2px black;
-    transition: box-shadow 0.4s linear;
-}
-
 html, body {
     overflow: hidden;
     height: 100%;
@@ -234,49 +187,10 @@ html, body {
     .header_above_600px {
         display: block;
     }
-
-    i {
-        flex: 1 0 31%;
-        max-width: 31%;
-        max-height: 200px;
-        margin: 1% 0 0 1%;
-        background-color: red;
-        visibility: hidden;
-    }
-
-    .item {
-        text-align: right;
-        flex: 1 0 31%;
-        max-width: 31%;
-        max-height: 200px;
-        margin: 1% 0 0 1%;
-        background-color: gray;
-        list-style-type: none;
-    }
-}
-
-@media screen and (min-device-width: 1000px) {
-    i {
-        flex: 1 0 21%;
-        max-width: 21%;
-        max-height: 200px;
-        margin: 1% 0 0 1%;
-        background-color: red;
-        visibility: hidden;
-    }
-
-    .item {
-        text-align: center;
-        flex: 1 0 21%;
-        max-width: 21%;
-        max-height: 200px;
-        margin: 1% 0 0 1%;
-        background-color: gray;
-        list-style-type: none;
-    }
 }
 
 .side-bar-active {
+    z-index: 1;
     position: absolute;
     color: #44c553;
     direction: rtl;
@@ -306,22 +220,6 @@ html, body {
         -webkit-transition: .4s;
         transition: .4s;
     }
-
-    .items-list {
-        background-color: #95b1b3;
-    }
-
-    .item {
-        text-align: center;
-        flex: 1 0 80%;
-        max-width: 80%;
-        height: 50%;
-        max-height: 50%;
-        margin: 1% 0 0 1%;
-        background-color: gray;
-        list-style-type: none;
-    }
-
     .header_below_600px {
         display: block;
     }
