--- a/css/dark2.css
+++ b/css/dark2.css
@@ -109,7 +109,7 @@ ul#menu li {
     display: inline;
 }
 
-.items-list {
+.cards-list {
     color: white;
     background-color: dimgray;
     justify-content: center;
@@ -122,35 +122,35 @@ ul#menu li {
     height: 84%;
 }
 
-.items-list li ul {
+.cards-list li ul {
     display: inline;
 }
 
-.items-list::-webkit-scrollbar {
+.cards-list::-webkit-scrollbar {
     width: 12px;
     height: 12px;
     cursor: grab;
     background-color: #E8EFF7;
 }
 
-.items-list::-webkit-scrollbar-corner {
+.cards-list::-webkit-scrollbar-corner {
     background-color: black;
 }
 
-.items-list::-webkit-scrollbar-thumb {
+.cards-list::-webkit-scrollbar-thumb {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: #44c553;
 }
 
-.items-list::-webkit-scrollbar-thumb:horizontal:active {
+.cards-list::-webkit-scrollbar-thumb:horizontal:active {
     background-color: red;
 }
 
-.items-list::-webkit-scrollbar-thumb:vertical:active {
+.cards-list::-webkit-scrollbar-thumb:vertical:active {
     background-color: red;
 }
 
-.item:hover{
+.card:hover{
     box-shadow: 0px 0px 1px 2px azure;
     transition: box-shadow 0.4s linear;
 }
@@ -163,7 +163,7 @@ ul#menu li {
         margin: 1% 0 0 1%;
         visibility: hidden;
     }
-    .item {
+    .card {
         text-align: right;
         flex: 1 0 31%;
         max-width: 31%;
@@ -182,7 +182,7 @@ ul#menu li {
         margin: 1% 0 0 1%;
         visibility: hidden;
     }
-    .item {
+    .card {
         text-align: center;
         flex: 1 0 21%;
         max-width: 21%;
